# taa-kdop-optimizer

./: CMakeLists.txt  LICENSE  README.md  image_optimizer.cc  kdop_clipping.glsl  kdop_volume.hh  sphere_optimizer.cc
